--- a/town_hall/speakers/c07x_sampson.html
+++ b/town_hall/speakers/c07x_sampson.html
@@ -46,14 +46,14 @@
 		
 		<aside>
 			<h2>Guest speakers</h2>
-			<h3>October<br><a href="c06x_brancaccio.html">David Brancaccio</a></h3>
-			<img src="../images/brancaccio75.jpg" alt="David Brancaccio photo">
-			<h3>November<br><a href="#">Andrew Ross Sorkin</a></h3>
-			<img src="../images/sorkin75.jpg" alt="Andrew Ross Sorkin photo">
-			<h3>January<br><a href="#">Amy Chua</a></h3>
-			<img src="../images/chua75.jpg" alt="Amy Chua photo">
-			<h3>February<br><a href="c07x_sampson.html">Scott Sampson</a></h3>
-			<img src="../images/sampson75.jpg" alt="Scott Sampson photo">
+			<nav id="nav_list">
+				<ul>
+					<li><a href="c06x_brancaccio.html">October - David Brancaccio</a></li>
+					<li><a href="#">November - Andrew Ross Sorkin</a></li>
+					<li><a href="#">January - Amy Chua</a></li>
+					<li><a href="c07x_sampson.html">February - Scott Sampson</a></li>
+				</ul>
+			</nav>
 			<h3><a href="../index.html">Return to Home page</a></h3>
 		</aside>
 	</main>
@@ -62,3 +62,4 @@
 	</footer>
 </body>
 </html>
+
