--- a/town_hall/speakers/c07x_sampson.html
+++ b/town_hall/speakers/c07x_sampson.html
@@ -48,9 +48,9 @@
 			<h2>Guest speakers</h2>
 			<nav id="nav_list">
 				<ul>
-					<li><a href="c06x_brancaccio.html">October - David Brancaccio</a></li>
-					<li><a href="#">November - Andrew Ross Sorkin</a></li>
-					<li><a href="#">January - Amy Chua</a></li>
+					<li><a href="c06x_brancaccio.html">October  David Brancaccio</a></li>
+					<li><a href="#">November  Andrew Ross Sorkin</a></li>
+					<li><a href="#">January  Amy Chua</a></li>
 					<li><a href="c07x_sampson.html">February - Scott Sampson</a></li>
 				</ul>
 			</nav>
